--- a/ReadNote/雇佣劳动与资本.md
+++ b/ReadNote/雇佣劳动与资本.md
@@ -1,7 +1,3 @@
----
-dg-publish: true
-dg-permalink: “雇佣劳动与资本WageLabourandCapital”
----
 
 本文的目的是从工人们最关心的**工资**说起，**让最广大工人们都了解自己的处境**
 
@@ -74,7 +70,7 @@ dg-permalink: “雇佣劳动与资本WageLabourandCapital”
 	1. **价格**由生产费用（**价值**）决定。
 		1. 市场的**供求关系**会使商品的价格会在它的生产费用周围波动。多了就赚钱，是利润；少了就赔钱，是亏本。
 		2. （注意：这个价格指的是整个行业的平均价格，而不是某一家的价格。比如苹果公司的手机卖的比其他手机就要贵不少，这可以包括技术垄断等多方面的原因。这里指的是整个手机行业的价格）
-	2. 价格由==生产费用==决定 = 价格由生产商品所必须的劳动**时间**决定（见序言[[雇佣劳动与资本WageLabourandCapital#^d1d3e7]]） 
+	2. 价格由==生产费用==决定 = 价格由生产商品所必须的劳动**时间**决定（见序言[[雇佣劳动与资本#^d1d3e7]]） 
 		1. 生产费用的组成部分
 			1. 原料（坯料）和机器（比如车床）的损耗部分
 			2. 工人的直接劳动，这个劳动是由**时间**衡量的
@@ -91,19 +87,19 @@ dg-permalink: “雇佣劳动与资本WageLabourandCapital”
 	1. 经济学家的说法
 		1. >资本是由用于生产新的原料、新的劳动工具和新的生活资料的各种原料、劳动工具和生活资料组成的。资本的所有这些组成部分都是劳动的创造物，劳动的产品，积累起来的劳动。作为进行新生产的手段的积累起来的劳动就是资本。<u>经济学家们就是这样说的。</u>什么是黑奴呢？黑奴就是黑种人。这个说明和前一个说明是一样的。
 		2. 怎么理解这句话？先看最后一句话。黑奴就是黑种人，显然是错的，这是马克思的嘲讽。黑奴，是在==特定的社会背景（殖民主义生产关系）==中被掠夺为奴的人。类似的，经济学家的说法也是错的。资本不是**一般的**积累的劳动，而是在==特定的社会背景（资本主义生产关系）==中的积累的劳动。
-	3. **资本是一种社会关系**
+	2. **资本是一种社会关系**
 		1. ==上面所说，“各种原料、劳动工具和生活资料”并不天生是资本。他们是在资本主义生产关系中，才成为资本的==
 		2. >资本的实质并不在于积累起来的劳动是替活劳动充当进行新生产的手段。它的实质在于**活劳动是替积累起来的劳动充当保存并增加其交换价值的手段**。
 			1. 怎样理解这句话？
-				1. ==“积累起来的劳动是替活劳动充当进行新生产的手段”。==这是原料、工具。它们在资本出现以前，甚至人类文明的初期就存在了。原始人手上的一把石刀就是一个例子。难道这把刀是资本吗？
-				2==.“ 活劳动是替积累起来的劳动充当保存并增加其交换价值的手段”。==活劳动：工人。这句话的意思就是：**工人成为了原料增值的手段**。工人劳动的目的不是劳动本身，而是为了让他手里的原料增值。苹果公司并不在乎这个社会需不需要这么多的手机，它也并不在乎工人，它只是利用工人，把沙子变成芯片装到手机里，这样，他的资产就增值了。
+			2.  ==“积累起来的劳动是替活劳动充当进行新生产的手段”。==这是原料、工具。它们在资本出现以前，甚至人类文明的初期就存在了。原始人手上的一把石刀就是一个例子。难道这把刀是资本吗？
+			3. ==“ 活劳动是替积累起来的劳动充当保存并增加其交换价值的手段”。==活劳动：工人。这句话的意思就是：**工人成为了原料增值的手段**。工人劳动的目的不是劳动本身，而是为了让他手里的原料增值。苹果公司并不在乎这个社会需不需要这么多的手机，它也并不在乎工人，它只是利用工人，把沙子变成芯片装到手机里，这样，他的资产就增值了。
 		3. 也就是说，经济学家偷换了概念。他们把原料、工具等等本来没有资本属性的东西，刻上了资本的印子。就好像清朝的老朽们指着裹脚女人的"三寸金莲"说: "女人的脚天生就是这样的！"
 2. **资本和工人的地位是截然对立的**
 	1. 资本不断通过工人增值。资本家付给工人一天 50 元的工钱，是因为工人一天给他提供了值100 元的货。
 	2. 工人什么也没得到。他今天赚的 50 块钱，已经在房租水电花光了
 	3. 既然资本是一种社会关系，那么资本的增值，就意味着这个社会关系的强化。资本越增加，资本家对工人的统治力就越增加。资本越有力量，工人就越卑贱。今天，我们越来越害怕失业，工资一次又一次被压低，欠薪的事越来越多，讨薪越来越难。
 	4. 有一些资本家走狗放屁：“资本的利益和工人的利益是一致的”。这其实是：工人的命运就取决于资本
-5. **资本和工人的利益是截然对立的**
+3. **资本和工人的利益是截然对立的**
 	1. 名义工资 vs. 实际工资 vs. 相对工资 
 		1. 名义工资：拿到多少钞票
 		2. 实际工资：用这些钞票实际可以买到的东西
