--- a/ReadNote/雇佣劳动与资本.md
+++ b/ReadNote/雇佣劳动与资本.md
@@ -52,12 +52,12 @@
 这个部分的内容基本和序言相同。
 
 #### 什么是工资？
-1.  >工资是资本家为一定的劳动时间或一定的劳动付出而偿付的一笔==货币==。
+1.  > 工资是资本家为一定的劳动时间或一定的劳动付出而偿付的一笔==货币==。
 2. 看起来好像是资本家用货币购买工人的劳动。工人是为了货币而向资本家出卖自己的劳动。但这只是假象。实际上，他们为了货币而向资本家出卖的东西，是他们的==劳动力==;
 3. 100 块钱，可以是一个手表的价格，也可以是一个工人日结工资，也就是他一天劳动力的价格。所以：
-	1. >==劳动力是一种商品==，是和砂糖一模一样的商品
+   > ==劳动力是一种商品==，是和砂糖一模一样的商品
 4. 工人必须把自己的劳动力当作商品卖出去，来换取自己所必需的生活资料（衣食住行）。**这个工人唯一拥有的商品的价格，就是工资**
-	1. >总之，劳动力是一种商品，是由其所有者即雇佣工人出卖给资本的一种商品。他为什么出卖它呢？为了生活。
+   > 总之，劳动力是一种商品，是由其所有者即雇佣工人出卖给资本的一种商品。他为什么出卖它呢？为了生活。
 #### 劳动力变成商品意味着什么？
 1. 工人做工对于他不过是使他能够生存的一种手段而已。劳动的意义不在于劳动，而在于挣钱，在于吃饭、睡觉、性爱，这些动物的功能上。人活成了动物，甚至不如动物。
 2. 劳动力变成了商品，人也就变成了商品。网上各种各样的低俗视频，不就是把女性当作吸睛的漂亮商品吗？
@@ -70,24 +70,25 @@
 	1. **价格**由生产费用（**价值**）决定。
 		1. 市场的**供求关系**会使商品的价格会在它的生产费用周围波动。多了就赚钱，是利润；少了就赔钱，是亏本。
 		2. （注意：这个价格指的是整个行业的平均价格，而不是某一家的价格。比如苹果公司的手机卖的比其他手机就要贵不少，这可以包括技术垄断等多方面的原因。这里指的是整个手机行业的价格）
-	2. 价格由==生产费用==决定 = 价格由生产商品所必须的劳动**时间**决定（见序言[[雇佣劳动与资本#^d1d3e7]]） 
-		1. 生产费用的组成部分
-			1. 原料（坯料）和机器（比如车床）的损耗部分
-			2. 工人的直接劳动，这个劳动是由**时间**衡量的
-3. **所以，工资（劳动力的价格）由==劳动力的生产费用==决定。受到市场供求规律的调节**。缺工人的时候，工资就提高，不却工人，工资就不变甚至降低，或者干脆裁员
-4. **工资 = 劳动力的生产费用 = ？**
-	1. > 工资就是为了使工人保持其为工人并把他训练成为工人所需要的费用。简单劳动力的生产费用就是维持工人生存和延续工人后代的费用。这样决定的工资就叫做最低工资额
-		1. 工人保持其为工人：衣食住行
-		2. 把他训练成为工人：培训费用
-		3. 补充“被消耗掉”的工人：生育
+	2. 价格由==生产费用==决定 = 价格由生产商品所必须的劳动**时间**决定（见序言[[雇佣劳动与资本#^d1d3e7]]）   
+	   - 生产费用的组成部分
+		1. 原料（坯料）和机器（比如车床）的损耗部分
+		2. 工人的直接劳动，这个劳动是由**时间**衡量的
+3. **所以，工资（劳动力的价格）由==劳动力的生产费用==决定。受到市场供求规律的调节**。
+   - 缺工人的时候，工资就提高，不却工人，工资就不变甚至降低，或者干脆裁员
+4. **工资 = 劳动力的生产费用 = ？**  
+   - 工资就是为了使工人保持其为工人并把他训练成为工人所需要的费用。简单劳动力的生产费用就是维持工人生存和延续工人后代的费用。这样决定的工资就叫做最低工资额
+	   1. 工人保持其为工人：衣食住行
+	   2. 把他训练成为工人：培训费用
+	   3. 补充“被消耗掉”的工人：生育
 
 ### 各个中间市民阶级和所谓的市民等级在现存制度下必然发生的灭亡过程
-#### 黑人天生就是奴隶吗？资本天生就是资本吗？
+#### 黑人天生就是奴隶吗？“资本”天生就是资本吗？
 1. **什么是资本？**
 	1. 经济学家的说法
-		1. >资本是由用于生产新的原料、新的劳动工具和新的生活资料的各种原料、劳动工具和生活资料组成的。资本的所有这些组成部分都是劳动的创造物，劳动的产品，积累起来的劳动。作为进行新生产的手段的积累起来的劳动就是资本。<u>经济学家们就是这样说的。</u>什么是黑奴呢？黑奴就是黑种人。这个说明和前一个说明是一样的。
-		2. 怎么理解这句话？先看最后一句话。黑奴就是黑种人，显然是错的，这是马克思的嘲讽。黑奴，是在==特定的社会背景（殖民主义生产关系）==中被掠夺为奴的人。类似的，经济学家的说法也是错的。资本不是**一般的**积累的劳动，而是在==特定的社会背景（资本主义生产关系）==中的积累的劳动。
-	2. **资本是一种社会关系**
+	   > 资本是由用于生产新的原料、新的劳动工具和新的生活资料的各种原料、劳动工具和生活资料组成的。资本的所有这些组成部分都是劳动的创造物，劳动的产品，积累起来的劳动。作为进行新生产的手段的积累起来的劳动就是资本。<u>经济学家们就是这样说的。</u>什么是黑奴呢？黑奴就是黑种人。这个说明和前一个说明是一样的。
+	    
+	   怎么理解这句话？先看最后一句话。黑奴就是黑种人，显然是错的，这是马克思的嘲讽。黑奴，是在==特定的社会背景（殖民主义生产关系）==中被掠夺为奴的人。类似的，经济学家的说法也是错的。资本不是**一般的**积累的劳动，而是在==特定的社会背景（资本主义生产关系）==中的积累的劳动。**资本是一种社会关系**
 		1. ==上面所说，“各种原料、劳动工具和生活资料”并不天生是资本。他们是在资本主义生产关系中，才成为资本的==
 		2. >资本的实质并不在于积累起来的劳动是替活劳动充当进行新生产的手段。它的实质在于**活劳动是替积累起来的劳动充当保存并增加其交换价值的手段**。
 			1. 怎样理解这句话？
@@ -112,4 +113,3 @@
 
 # 读书笔记
 ![[雇佣劳动与资本-马克思#读书笔记]]
-[[雇佣劳动与资本-马克思]]
