--- a/ReadNote/雇佣劳动与资本.md
+++ b/ReadNote/雇佣劳动与资本.md
@@ -25,7 +25,7 @@
 	1. 这里恩格斯用一个钳工的例子来说明这个问题
 	2. 第一种角度。从**资本家**的角度。按照**劳动的成果**计算。钳工 12 小时创造了 6 块钱的价值。
 	3. 第二种角度。从**钳工**的角度。按照**劳动的生产费用**计算。钳工 12 小时的工资是 3 块钱
-	4. >这样看来，劳动不是有一个价值，而是有两个价值，并且是两个极不相同的价值！
+		>这样看来，劳动不是有一个价值，而是有两个价值，并且是两个极不相同的价值！
 5. 新的矛盾：6=3？剥削的秘密
 	1. 马克思&恩格斯：**经济学家所看做“劳动”生产费用的，并不是劳动的生产费用，而是活的工人本身的生产费用**
 6. 6=3。剥削的真相
@@ -34,6 +34,7 @@
 7. "6=3"的魔术会带来什么？
 
 财富在资本家那边滚雪球起来。而对于工人永远只能勉强糊口。
+
 >一方面是不可计量的财富和购买者无法对付的产品过剩，另一方面是社会上绝大多数人口无产阶级化，变成雇佣工人，因而无力获得这些过剩的产品。社会分裂为人数很少的过分富有的阶级和人数众多的无产的雇佣工人阶级，这就使得这个社会被自己的富有所窒息，而同时社会的绝大多数成员却几乎没有或完全没有免除极度贫困的任何保障
 
 ## [[雇佣劳动与资本-马克思#雇佣劳动与资本]]
@@ -54,12 +55,15 @@
 这个部分的内容基本和序言相同。
 
 #### 什么是工资？
-1.  > 工资是资本家为一定的劳动时间或一定的劳动付出而偿付的一笔==货币==。
-2. 看起来好像是资本家用货币购买工人的劳动。工人是为了货币而向资本家出卖自己的劳动。但这只是假象。实际上，他们为了货币而向资本家出卖的东西，是他们的==劳动力==;
-3. 100 块钱，可以是一个手表的价格，也可以是一个工人日结工资，也就是他一天劳动力的价格。所以：
-   > ==劳动力是一种商品==，是和砂糖一模一样的商品
-4. 工人必须把自己的劳动力当作商品卖出去，来换取自己所必需的生活资料（衣食住行）。**这个工人唯一拥有的商品的价格，就是工资**
-   > 总之，劳动力是一种商品，是由其所有者即雇佣工人出卖给资本的一种商品。他为什么出卖它呢？为了生活。
+
+> 工资是资本家为一定的劳动时间或一定的劳动付出而偿付的一笔==货币==。
+
+1. 看起来好像是资本家用货币购买工人的劳动。工人是为了货币而向资本家出卖自己的劳动。但这只是假象。实际上，他们为了货币而向资本家出卖的东西，是他们的==劳动力==;
+2. 100 块钱，可以是一个手表的价格，也可以是一个工人日结工资，也就是他一天劳动力的价格。所以：
+	> ==劳动力是一种商品==，是和砂糖一模一样的商品
+3. 工人必须把自己的劳动力当作商品卖出去，来换取自己所必需的生活资料（衣食住行）。**这个工人唯一拥有的商品的价格，就是工资**
+	> 总之，劳动力是一种商品，是由其所有者即雇佣工人出卖给资本的一种商品。他为什么出卖它呢？为了生活。
+
 #### 劳动力变成商品意味着什么？
 1. 工人做工对于他不过是使他能够生存的一种手段而已。劳动的意义不在于劳动，而在于挣钱，在于吃饭、睡觉、性爱，这些动物的功能上。人活成了动物，甚至不如动物。
 2. 劳动力变成了商品，人也就变成了商品。网上各种各样的低俗视频，不就是把女性当作吸睛的漂亮商品吗？
@@ -72,7 +76,7 @@
 	1. **价格**由生产费用（**价值**）决定。
 		1. 市场的**供求关系**会使商品的价格会在它的生产费用周围波动。多了就赚钱，是利润；少了就赔钱，是亏本。
 		2. （注意：这个价格指的是整个行业的平均价格，而不是某一家的价格。比如苹果公司的手机卖的比其他手机就要贵不少，这可以包括技术垄断等多方面的原因。这里指的是整个手机行业的价格）
-	2. 价格由==生产费用==决定 = 价格由生产商品所必须的劳动**时间**决定（见序言[[雇佣劳动与资本#^d1d3e7]]）   
+	2. 价格由==生产费用==决定 = 价格由生产商品所必须的劳动**时间**决定（见序言[[雇佣劳动与资本]]）   
 	   - 生产费用的组成部分
 		1. 原料（坯料）和机器（比如车床）的损耗部分
 		2. 工人的直接劳动，这个劳动是由**时间**衡量的
@@ -90,7 +94,8 @@
 	1. 经济学家的说法
 	   > 资本是由用于生产新的原料、新的劳动工具和新的生活资料的各种原料、劳动工具和生活资料组成的。资本的所有这些组成部分都是劳动的创造物，劳动的产品，积累起来的劳动。作为进行新生产的手段的积累起来的劳动就是资本。<u>经济学家们就是这样说的。</u>什么是黑奴呢？黑奴就是黑种人。这个说明和前一个说明是一样的。
 	    
-	   怎么理解这句话？先看最后一句话。黑奴就是黑种人，显然是错的，这是马克思的嘲讽。黑奴，是在==特定的社会背景（殖民主义生产关系）==中被掠夺为奴的人。类似的，经济学家的说法也是错的。资本不是**一般的**积累的劳动，而是在==特定的社会背景（资本主义生产关系）==中的积累的劳动。**资本是一种社会关系**
+		怎么理解这句话？先看最后一句话。黑奴就是黑种人，显然是错的，这是马克思的嘲讽。黑奴，是在==特定的社会背景（殖民主义生产关系）==中被掠夺为奴的人。类似的，经济学家的说法也是错的。资本不是**一般的**积累的劳动，而是在==特定的社会背景（资本主义生产关系）==中的积累的劳动。**资本是一种社会关系**
+		
 		1. ==上面所说，“各种原料、劳动工具和生活资料”并不天生是资本。他们是在资本主义生产关系中，才成为资本的==
 		2. >资本的实质并不在于积累起来的劳动是替活劳动充当进行新生产的手段。它的实质在于**活劳动是替积累起来的劳动充当保存并增加其交换价值的手段**。
 			1. 怎样理解这句话？
@@ -114,4 +119,5 @@
 		3. 工人越像零件一样可以随便替换，工人就越要和工人竞争，这就是==卷==。工人就越卑贱，老板就敢开越低的工资。反正总有人会干的。
 
 # 读书笔记
-![[雇佣劳动与资本-马克思#读书笔记]]
+![[雇佣劳动与资本-马克思#读书笔记]]  
+[[雇佣劳动与资本-马克思]]
